--- a/Petualangan-Kelas-5.html
+++ b/Petualangan-Kelas-5.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Petualangan-Kelas-5-2</title>
+  <title>Petualangan-Kelas-5</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet"/>
   <style>
     body {
@@ -125,7 +125,7 @@
       <img src="https://i.imgur.com/oWB8vKW.png" alt="Logo Sekolah">
     </div>
     <div class="menu-group">
-      <a href="index1.html">🏠 Beranda</a>
+      <a href="index.html">🏠 Beranda</a>
       <a href="#">Program</a>
       <a href="kelas.html">📚 Kelas</a>
     </div>
@@ -174,3 +174,4 @@
 
 </body>
 </html>
+
