--- a/kelas.html
+++ b/kelas.html
@@ -125,7 +125,7 @@
       <img src="https://i.imgur.com/oWB8vKW.png" alt="Logo Sekolah">
     </div>
     <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 0.5rem; margin-left: auto; margin-right: auto;">
-      <a href="index1.html">Beranda</a>
+      <a href="index.html">Beranda</a>
       <a href="#">Tentang</a>
       <a href="#">Program</a>
       <a href="#">Galeri</a>
@@ -149,3 +149,4 @@
 
 </body>
 </html>
+
