--- a/kelas.html
+++ b/kelas.html
@@ -142,11 +142,12 @@
       <a href="kelas2.html" class="button-kelas kelas2">2</a>
       <a href="kelas3.html" class="button-kelas kelas3">3</a>
       <a href="kelas4.html" class="button-kelas kelas4">4</a>
-      <a href="Petualangan-Kelas-5-2.html" class="button-kelas kelas5">5</a> <!-- Link telah diganti -->
+      <a href="Petualangan-Kelas-5.html" class="button-kelas kelas5">5</a> <!-- Link telah diganti -->
       <a href="kelas6.html" class="button-kelas kelas6">6</a>
     </div>
   </div>
 
 </body>
 </html>
+
 
