--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SDN 160 Gresik - Sekolah Ceria</title>
+  <title>UPT SD Negeri 160 Gresik - Sekolah Ceria</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <style>
     @media only screen and (max-width: 768px) {
@@ -125,3 +125,4 @@
   </div>
 </body>
 </html>
+
