--- a/index.html
+++ b/index.html
@@ -119,10 +119,11 @@
     </nav>
 
     <section class="hero" style="margin-top: -40px;">
-      <h1 style="font-size: 3rem;">Selamat Datang di SDN 160 Gresik</h1>
+      <h1 style="font-size: 3rem;">Selamat Datang di UPT SD Negeri 160 Gresik</h1>
       <p style="font-size: 1.6rem;">Tempat Tumbuhnya Anak Hebat dan Bahagia!</p>
     </section>
   </div>
 </body>
 </html>
+
 
