--- a/Lembah-Matematika-Kelas5.html
+++ b/Lembah-Matematika-Kelas5.html
@@ -102,7 +102,7 @@
 <body>
 
   <nav>
-    <a href="index1.html">🏠 Beranda</a>
+    <a href="index.html">🏠 Beranda</a>
     <a href="kelas.html">📚 Kembali ke Kelas</a>
   </nav>
 
@@ -122,3 +122,4 @@
 
 </body>
 </html>
+
