--- a/latihan-soal-matematika.html
+++ b/latihan-soal-matematika.html
@@ -94,7 +94,7 @@
 <body>
 
   <nav>
-    <a href="index1.html">🏠 Beranda</a>
+    <a href="index.html">🏠 Beranda</a>
     <a href="kelas.html">📚 Kembali ke Kelas</a>
     <a href="Lembah-Matematika-Kelas5.html">🧮 Menu Matematika</a>
   </nav>
@@ -117,4 +117,5 @@
 
 </body>
 </html>
+
 
