--- a/Lembah-Matematika-Kelas5.html
+++ b/Lembah-Matematika-Kelas5.html
@@ -117,9 +117,10 @@
     <a href="#pecahan" class="math-item">🔢 Pecahan</a>
     <a href="#pengukuran" class="math-item">📏 Pengukuran</a>
     <a href="#geometri" class="math-item">📐 Geometri</a>
-    <a href="latihan-soal-matematika.html" class="math-item">🧠 Latihan Soal</a>
+    <a href="latihan-soal-matematika5.html" class="math-item">🧠 Latihan Soal</a>
   </div>
 
 </body>
 </html>
+
 
