--- a/index.html
+++ b/index.html
@@ -115,6 +115,17 @@
       display: inline-block;
     }
 
+    .dropdown-toggle {
+      background: rgba(255,255,255,0.9);
+      padding: 0.5rem 1rem;
+      border-radius: 6px;
+      color: #0288d1;
+      font-weight: bold;
+      cursor: pointer;
+      text-decoration: none;
+      display: inline-block;
+    }
+
     .dropdown-content {
       display: none;
       position: absolute;
@@ -140,6 +151,10 @@
     .dropdown:hover .dropdown-content {
       display: block;
     }
+
+    .dropdown.open .dropdown-content {
+      display: block;
+    }
   </style>
 </head>
 <body>
@@ -150,17 +165,17 @@
         <img src="https://i.imgur.com/tGA5UBc.png" alt="Logo Tut Wuri" style="height: 62px;">
         <img src="https://i.imgur.com/oWB8vKW.png" alt="Logo Sekolah" style="height: 55px;">
       </div>
-      <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 0.5rem; margin-left: auto; margin-right: auto;">
+      <div style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; gap: 0.5rem; margin-left: auto; margin-right: auto;">
         <a href="#" style="background: rgba(255,255,255,0.9); padding: 0.5rem 1rem; border-radius: 6px; color: #0288d1;">Beranda</a>
         <a href="#tentang" style="background: rgba(255,255,255,0.9); padding: 0.5rem 1rem; border-radius: 6px; color: #0288d1;">Tentang</a>
         <a href="#program" style="background: rgba(255,255,255,0.9); padding: 0.5rem 1rem; border-radius: 6px; color: #0288d1;">Program</a>
         <a href="#galeri" style="background: rgba(255,255,255,0.9); padding: 0.5rem 1rem; border-radius: 6px; color: #0288d1;">Galeri</a>
         <a href="kelas.html" style="background: rgba(255,255,255,0.9); padding: 0.5rem 1rem; border-radius: 6px; color: #0288d1;">Kelas</a>
         <a href="#kontak" style="background: rgba(255,255,255,0.9); padding: 0.5rem 1rem; border-radius: 6px; color: #0288d1;">Kontak</a>
-
-        <!-- Dropdown Latihan -->
+        
+        <!-- Dropdown disusun sejajar -->
         <div class="dropdown">
-          <a href="#" class="dropdown-toggle" style="background: rgba(255,255,255,0.9); padding: 0.5rem 1rem; border-radius: 6px; color: #0288d1;">Latihan ▼</a>
+          <a href="#" class="dropdown-toggle">Latihan ▼</a>
           <div class="dropdown-content">
             <a href="latihan/kelas1.html">Kelas 1</a>
             <a href="latihan/kelas2.html">Kelas 2</a>
@@ -191,7 +206,6 @@
           dropdown.classList.toggle("open");
         });
 
-        // Klik di luar untuk menutup
         document.addEventListener("click", function (e) {
           if (!dropdown.contains(e.target)) {
             dropdown.classList.remove("open");
