--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>UPT SD Negeri 160 Gresik - Sekolah Ceria</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet"/>
   <style>
     @media only screen and (max-width: 768px) {
       nav img {
@@ -181,7 +181,7 @@
             <a href="latihan/kelas2.html">Kelas 2</a>
             <a href="latihan/kelas3.html">Kelas 3</a>
             <a href="latihan/kelas4.html">Kelas 4</a>
-            <a href="latihan/kelas5.html">Kelas 5</a>
+            <a href="Petualangan-Kelas-5.html">Kelas 5</a> <!-- sudah diperbarui -->
             <a href="latihan/kelas6.html">Kelas 6</a>
           </div>
         </div>
