--- a/Lembah-Matematika-Kelas5.html
+++ b/Lembah-Matematika-Kelas5.html
@@ -6,13 +6,21 @@
   <title>Lembah-Matematika-Kelas5</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet"/>
   <style>
-    body {
+    html, body {
       margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: url('https://i.imgur.com/EBZL7Do.png') no-repeat center center fixed;
-      background-size: cover;
-      color: #0288d1;
       padding: 0;
+      font-family: 'Poppins', sans-serif;
+      min-height: 100vh;
+    }
+
+    body {
+      background-image: url('https://i.imgur.com/EBZL7Do.png');
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: contain; /* Gambar tidak akan terpotong */
+      background-attachment: scroll;
+      background-color: #e0f7fa; /* fallback jika gambar tidak muncul */
+      color: #0288d1;
     }
 
     nav {
@@ -21,7 +29,6 @@
       display: flex;
       justify-content: center;
       gap: 1rem;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
 
     nav a {
@@ -66,7 +73,7 @@
 
     .math-menu {
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 1rem;
       max-width: 900px;
       margin: 2rem auto;
@@ -89,14 +96,25 @@
       transform: scale(1.05);
     }
 
-    .math-menu a:nth-child(4) {
-      grid-column: 1 / 2;
-    }
+    @media (max-width: 768px) {
+      body {
+        background-size: contain;
+        background-position: center top;
+        background-attachment: scroll;
+      }
 
-    .math-menu a:nth-child(5) {
-      grid-column: 2 / 3;
-    }
+      .title-section h1 {
+        font-size: 1.5rem;
+      }
 
+      .intro-title {
+        font-size: 1rem;
+      }
+
+      .intro-subtitle {
+        font-size: 0.9rem;
+      }
+    }
   </style>
 </head>
 <body>
@@ -122,5 +140,3 @@
 
 </body>
 </html>
-
-
