--- a/Lembah-Matematika-Kelas5.html
+++ b/Lembah-Matematika-Kelas5.html
@@ -17,9 +17,9 @@
       background-image: url('https://i.imgur.com/EBZL7Do.png');
       background-repeat: no-repeat;
       background-position: center center;
-      background-size: contain; /* Gambar tidak akan terpotong */
+      background-size: contain;
       background-attachment: scroll;
-      background-color: #e0f7fa; /* fallback jika gambar tidak muncul */
+      background-color: #e0f7fa;
       color: #0288d1;
     }
 
@@ -136,6 +136,7 @@
     <a href="#pengukuran" class="math-item">📏 Pengukuran</a>
     <a href="#geometri" class="math-item">📐 Geometri</a>
     <a href="latihan-soal-matematika5.html" class="math-item">🧠 Latihan Soal</a>
+    <a href="tugas.html" class="math-item">📄 Tugas</a>
   </div>
 
 </body>
