--- a/Lembah-Matematika-Kelas5.html
+++ b/Lembah-Matematika-Kelas5.html
@@ -159,7 +159,7 @@
     <a href="kelas.html">🏫 Kembali ke Kelas</a>
     <a href="latihan-soal-matematika5.html">🧠 Latihan Soal</a>
     <a href="tugas.html">📄 Lihat Tugas</a>
-    <a href="petualangan.html">📖 Petualangan Belajar</a>
+    <a href="Petualangan-Kelas-5.html">📖 Petualangan Belajar</a>
   </div>
 
   <!-- Title Section -->
@@ -198,3 +198,4 @@
 
 </body>
 </html>
+
