--- a/Lembah-Matematika-Kelas5.html
+++ b/Lembah-Matematika-Kelas5.html
@@ -158,8 +158,8 @@
     <a href="index.html">🏠 Beranda</a>
     <a href="kelas.html">🏫 Kembali ke Kelas</a>
     <a href="latihan-soal-matematika5.html">🧠 Latihan Soal</a>
-    <a href="tugas.html">📄 Lihat Tugas</a>
-    <a href="Petualangan-Kelas-5.html">📖 Petualangan Belajar</a>
+    <a href="tugas.html">📄 Tugas</a>
+    <a href="Petualangan-Kelas-5.html">📖 Petualangan Belajar Kelas 5</a>
   </div>
 
   <!-- Title Section -->
@@ -198,4 +198,5 @@
 
 </body>
 </html>
+
 
