--- a/Lembah-Matematika-Kelas5.html
+++ b/Lembah-Matematika-Kelas5.html
@@ -176,7 +176,7 @@
     <a href="#pengukuran">📏 Pengukuran</a>
     <a href="#geometri">📐 Geometri</a>
     <a href="latihan-soal-matematika5.html">🧠 Latihan Soal</a>
-    <a href="tugas.html">📄 Lihat Tugas</a>
+    <a href="tugas.html">📄 Tugas</a>
   </div>
 
   <!-- Script to toggle menu -->
@@ -198,5 +198,6 @@
 
 </body>
 </html>
+
 
 
