--- a/Tugas Matematika.html
+++ b/Tugas Matematika.html
@@ -141,7 +141,7 @@
   <div class="menu" id="navMenu">
     <a href="index.html">🏠 Beranda</a>
     <a href="Lembah-Matematika-Kelas5.html">🧮 Kembali ke Kelas</a>
-    <a href="Latihan-Soal-Kelas5.html">📘 Latihan Soal</a>
+    <a href="latihan-soal-matematika5.html">📘 Latihan Soal</a>
     <a href="Petualangan-Kelas5.html">🎮 Petualangan Belajar</a>
   </div>
 
@@ -173,3 +173,4 @@
 
 </body>
 </html>
+
