--- a/Petualangan-Kelas-5.html
+++ b/Petualangan-Kelas-5.html
@@ -155,7 +155,7 @@
 
   <!-- Peta Petualangan -->
   <div class="map-grid">
-    <a href="pkn5.html" class="map-item">
+    <a href="istana pancasila.html" class="map-item">
       <span class="emoji">⭐</span>
       Istana Pancasila
     </a>
@@ -191,3 +191,4 @@
 
 </body>
 </html>
+
