--- a/istana pancasila.html
+++ b/istana pancasila.html
@@ -13,7 +13,7 @@
       height: 100%;
       width: 100%;
       overflow-x: hidden;
-      background: url('https://i.imgur.com/VladZZV.png') no-repeat center center fixed;
+      background: url('https://i.imgur.com/Bc2M7hb.png') no-repeat center center fixed;
       background-size: cover;
       background-position: center;
       color: #fff;
@@ -157,4 +157,5 @@
 
  
 </body>
+
 </html>
