--- a/latihan 1 - istana.html
+++ b/latihan 1 - istana.html
@@ -29,7 +29,6 @@
       position: sticky;
       top: 0;
       z-index: 10;
-      
     }
 
     .nav-left img {
@@ -75,7 +74,6 @@
       gap: 1.5rem;
     }
 
-    /* Kotak judul */
     .box-judul {
       background: rgba(255,255,255,0.9);
       border-radius: 12px;
@@ -88,7 +86,6 @@
       user-select: none;
     }
 
-    /* Kotak petunjuk */
     .box-petunjuk {
       background: rgba(255,255,255,0.9);
       border-radius: 12px;
@@ -101,7 +98,6 @@
       user-select: none;
     }
 
-    /* Tombol next terpisah */
     .btn-next-wrapper {
       text-align: center;
       margin-top: 1rem;
@@ -126,7 +122,6 @@
       transform: scale(1.08);
     }
 
-    /* Responsive */
     @media (max-width: 480px) {
       nav {
         padding: 1rem;
@@ -184,10 +179,11 @@
     </div>
 
     <div class="btn-next-wrapper">
-      <button class="next-btn" type="button" onclick="alert('Tombol Next masih dalam pengembangan!')">Next &raquo;</button>
+      <button class="next-btn" type="button" onclick="window.location.href='identitas-istana.html'">
+        Next &raquo;
+      </button>
     </div>
   </main>
 
 </body>
 </html>
-
