--- a/istana pancasila.html
+++ b/istana pancasila.html
@@ -152,12 +152,13 @@
     <a href="#penerapan-warga" class="map-item"><span class="emoji">🧍</span>Penerapan bagi Warga Negara</a>
     <a href="#gotong-royong" class="map-item"><span class="emoji">🤝</span>Tradisi Gotong Royong</a>
     <a href="#gotong-kota" class="map-item"><span class="emoji">🏙️</span>Gotong Royong di Kota & Kabupaten</a>
-    <a href="Istana Pancasila/Sejarah Kelahiran Pancasila 5.html" class="map-item"><span class="emoji">📜</span>Sejarah Kelahiran Pancasila</a>
+    <a href="kelas-5/Istana Pancasila/Sejarah Kelahiran Pancasila 5.html" class="map-item"><span class="emoji">📜</span>Sejarah Kelahiran Pancasila</a>
   </div>
 
  
 </body>
 
 </html>
+
 
 
