--- a/kelas-5/Istana Pancasila /Sejarah Kelahiran Pancasila 5.html
+++ b/kelas-5/Istana Pancasila /Sejarah Kelahiran Pancasila 5.html
@@ -190,7 +190,7 @@
       <img src="https://i.imgur.com/oWB8vKW.png" alt="Logo Sekolah" />
     </div>
     <div class="nav-right">
-      <a href="index.html">🏠 Beranda</a>
+      <a href="/UPT-SD-NEGERI-160-GRESIK/index.html">🏠 Beranda</a>
       <a href="#">📌 Program</a>
       <a href="#">🖼️ Galeri</a>
     </div>
