--- a/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/latihan1-istana.html
+++ b/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/latihan1-istana.html
@@ -179,7 +179,7 @@
     </div>
 
     <div class="btn-next-wrapper">
-      <button class="next-btn" type="button" onclick="window.location.href='identitas-istana.html'">
+      <button class="next-btn" type="button" onclick="window.location.href='soal-latihan1-istana.html'">
         Next &raquo;
       </button>
     </div>
