--- a/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/latihan1-istana.html
+++ b/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/latihan1-istana.html
@@ -161,7 +161,8 @@
       <img src="https://i.imgur.com/oWB8vKW.png" alt="Logo Sekolah" />
     </div>
     <div class="nav-right">
-      <a href="index.html">🏠 Beranda</a>
+     
+      <a href="/">🏠 Beranda</a>
       <a href="#">📌 Program</a>
       <a href="#">🖼️ Galeri</a>
     </div>
