--- a/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/latihan1-istana.html
+++ b/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/latihan1-istana.html
@@ -162,7 +162,7 @@
     </div>
     <div class="nav-right">
      
-      <a href="/">🏠 Beranda</a>
+      <a href="/UPT-SD-NEGERI-160-GRESIK/index.html">🏠 Beranda</a>
       <a href="#">📌 Program</a>
       <a href="#">🖼️ Galeri</a>
     </div>
