--- a/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/latihan1-istana.html
+++ b/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/latihan1-istana.html
@@ -161,8 +161,7 @@
       <img src="https://i.imgur.com/oWB8vKW.png" alt="Logo Sekolah" />
     </div>
     <div class="nav-right">
-     
-      <a href="UPT-SD-NEGERI-160-GRESIK/index.html">🏠 Beranda</a>
+      <a href="https://sdn160gresik.github.io/UPT-SD-NEGERI-160-GRESIK/">🏠 Beranda</a>
       <a href="#">📌 Program</a>
       <a href="#">🖼️ Galeri</a>
     </div>
