--- a/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/soal-latihan1-istana.html
+++ b/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/soal-latihan1-istana.html
@@ -149,7 +149,7 @@ button:hover {
 <body>
 <div class="container">
     <div class="nav">
-        <a href="index.html">📘 Tugas Kelas 5</a>
+        <a href="https://sdn160gresik.github.io/UPT-SD-NEGERI-160-GRESIK/kelas-5/istanap-pancasila/">⬅️ kembali</a>
         <a href="Soal_PKn_Kelas_5.pdf" download>📥 Download</a>
     </div>
     <h1 style="color: #2c3e50; text-align: center; background-color: white; padding: 10px 20px; border-radius: 10px; border: 2px solid #add8e6;">
