--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 </head>
 <body>
   <!-- Audio klik -->
-  <audio id="clickSound" src="suara/bubble-pop-04-323580 (mp3cut.net).mp3" preload="auto"></audio>
+  <audio id="clickSound" src="suara/bubble-pop.mp3" preload="auto"></audio>
 
   <div class="background-wrapper">
     <nav style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center; gap: 0.5rem; padding: 1rem;">
@@ -229,3 +229,4 @@
   </script>
 </body>
 </html>
+
