--- a/kelas.html
+++ b/kelas.html
@@ -182,7 +182,7 @@
   </div>
 
   <script>
-    const clickSound = new Audio('suara/bubble-pop-04-323580 (mp3cut.net).mp3');
+    const clickSound = new Audio('suara/bubble-pop.mp3');
     const popup = document.getElementById('popup');
     const popupText = document.getElementById('popup-text');
 
@@ -221,3 +221,4 @@
 
 </body>
 </html>
+
