--- a/kelas-5/Petualangan-Kelas-5.html
+++ b/kelas-5/Petualangan-Kelas-5.html
@@ -155,7 +155,7 @@
 
   <!-- Peta Petualangan -->
   <div class="map-grid">
-    <a href="istana pancasila.html" class="map-item">
+    <a href="istanap-pancasila/istana-pancasila.html" class="map-item">
       <span class="emoji">⭐</span>
       Istana Pancasila
     </a>
@@ -205,3 +205,4 @@
 
 </body>
 </html>
+
